--- a/problems/4/data.yaml
+++ b/problems/4/data.yaml
@@ -1,4 +1,4 @@
-answer: Square
+answer: Circle
 description: As Sarah was playing basketball with her friends, she realized that the
   ball they were using had a unique shape.<br/>Can you help her identify the shape
   of a basketball?
