--- a/problems/5/data.yaml
+++ b/problems/5/data.yaml
@@ -1,12 +1,12 @@
-answer: false
+answer: "No"
 description: In the forest, Nutmeg, Pecan, Chestnut, and Walnut, four hungry squirrels,
-  found three acorns, and they all wanted to have a taste of the delicious treat
+  found three acorns, and they all wanted to have a taste of the delicious treat<br/> Are there enough acorns for every squirrel?
 final: true
 id: 5
 image: enough.png
 name: hungry-squirrels
 options:
-- value: false
-- value: true
+- value: "Yes"
+- value: "No"
 tags: comparing
 title: Hungry squirrels
