--- a/problems/5/data.yaml
+++ b/problems/5/data.yaml
@@ -1,6 +1,6 @@
 answer: 'No'
 description: In the forest, Nutmeg, Pecan, Chestnut, and Walnut, four hungry squirrels,
-  found three acorns, and they all wanted to have a taste of the delicious treat<br/>
+  found three acorns, and they all wanted to have a taste of the delicious treat.<br/>
   Are there enough acorns for every squirrel?
 final: true
 id: 5
