--- a/problems/8/data.yaml
+++ b/problems/8/data.yaml
@@ -1,13 +1,14 @@
 answer: 3
-description: Jimmy had 5 toy cars, but he lost 2 of them
+description: Jimmy had 5 toy cars, but he lost 2 of them<br/>How many toy cars does
+  he have left?
 final: true
 id: 8
 image: image.png
 name: lost-and-found
 options:
-- value: 3
 - value: 5
-- value: 9
 - value: 7
+- value: 3
+- value: 9
 tags: subtraction
 title: Lost and Found
