--- a/problems/9/data.yaml
+++ b/problems/9/data.yaml
@@ -6,9 +6,9 @@ id: 9
 image: image.png
 name: oopsie-daisy
 options:
-- value: 5
 - value: 10
 - value: 5
+- value: 5
 - value: 3
-tags: counting
+tags: subtraction
 title: Oopsie Daisy
