--- a/problems/12/data.yaml
+++ b/problems/12/data.yaml
@@ -3,12 +3,12 @@ description: There were 24 bananas in a bunch, but 13 of them were eaten. How ma
   bananas are left in the bunch?
 final: true
 id: 12
-image: image.png
+image: image2.png
 name: Bunch of Bananas
 options:
-- value: 20
-- value: 11
-- value: 9
 - value: 14
+- value: 11
+- value: 20
+- value: 9
 tags: subtraction
 title: Bunch of Bananas
