--- a/problems/6/data.yaml
+++ b/problems/6/data.yaml
@@ -1,3 +1,4 @@
+age: 6
 answer: 5
 description: Samantha and Jack are classmates who love to share their snacks during
   recess. Samantha has 3 apples and her friend Jack gives her 2 more.<br/>How many
@@ -7,9 +8,9 @@ id: 6
 image: sharing.png
 name: sharing-is-caring
 options:
+- value: 7
 - value: 3
 - value: 2
-- value: 7
 - value: 5
 tags: addition
 title: Sharing is Caring
