--- a/problems/9/data.yaml
+++ b/problems/9/data.yaml
@@ -1,3 +1,4 @@
+age: 6
 answer: 5
 description: Sarah has 8 crayons, but she accidentally breaks 3 of them.<br/>How many
   crayons does Sarah have left?
@@ -8,7 +9,7 @@ name: oopsie-daisy
 options:
 - value: 8
 - value: 3
-- value: 10
 - value: 5
+- value: 10
 tags: subtraction
 title: Oopsie Daisy
