--- a/problems/1/data.yaml
+++ b/problems/1/data.yaml
@@ -1,3 +1,4 @@
+age: 6
 answer: 2
 description: null
 final: true
@@ -5,9 +6,9 @@ id: 1
 image: cows.png
 name: how-many-cows
 options:
-- value: 1
 - value: 2
 - value: 4
 - value: 3
+- value: 1
 tags: counting
 title: How many cows are there?
