--- a/problems/10/data.yaml
+++ b/problems/10/data.yaml
@@ -1,3 +1,4 @@
+age: 6
 answer: 6
 description: There were 7 flowers in a vase, but 1 of them wilted and had to be thrown
   away.<br/>How many flowers are left in the vase?
@@ -6,9 +7,9 @@ id: 10
 image: image.png
 name: Wilted Woes
 options:
-- value: 20
-- value: 6
-- value: 17
 - value: 1
+- value: 6
+- value: 20
+- value: 17
 tags: subtraction
 title: Wilted Woes
