--- a/problems/11/data.yaml
+++ b/problems/11/data.yaml
@@ -1,3 +1,4 @@
+age: 6
 answer: 4
 description: Julia has 6 balloons, but she accidentally lets go of 2.<br/>How many
   balloons does Julia have left?
