--- a/problems/13/data.yaml
+++ b/problems/13/data.yaml
@@ -1,3 +1,4 @@
+age: 6
 answer: 12
 description: Zoe ordered 3 pizzas with 4 slices each. How many slices of pizza does
   she have in total?
@@ -5,9 +6,9 @@ final: true
 id: 13
 image: image.png
 options:
+- value: 9
 - value: 7
 - value: 12
-- value: 9
 - value: 13
 tags: multiplication
 title: Pizza Party
