--- a/problems/3/data.yaml
+++ b/problems/3/data.yaml
@@ -1,3 +1,4 @@
+age: 6
 answer: 3
 description: ''
 final: true
@@ -5,9 +6,9 @@ id: 3
 image: chickens.png
 name: how-many-chickens
 options:
-- value: 6
+- value: 10
 - value: 3
 - value: 9
-- value: 10
+- value: 6
 tags: counting
 title: How many chickens are there?
