--- a/problems/4/data.yaml
+++ b/problems/4/data.yaml
@@ -1,3 +1,4 @@
+age: 6
 answer: Circle
 description: As Sarah was playing basketball with her friends, she realized that the
   ball they were using had a unique shape.<br/>Can you help her identify the shape
@@ -7,9 +8,9 @@ id: 4
 image: ball.png
 name: basketbal
 options:
-- value: Rectangle
-- value: Triangle
 - value: Circle
+- value: Triangle
 - value: Square
+- value: Rectangle
 tags: shape
 title: Basketball
