--- a/problems/7/data.yaml
+++ b/problems/7/data.yaml
@@ -1,3 +1,4 @@
+age: 6
 answer: 5
 description: There is a bird named Tweetie sitting on a tree with seven other friends.
   If three of the friends fly away, how many birds will be left on the tree?
@@ -6,9 +7,9 @@ id: 7
 image: image.png
 name: birds-on-a-branch
 options:
-- value: 3
-- value: 5
-- value: 8
 - value: 10
+- value: 5
+- value: 3
+- value: 8
 tags: subtraction
 title: 'Birds on a Branch: Who''s Left?'
