--- a/problems/17/data.yaml
+++ b/problems/17/data.yaml
@@ -7,8 +7,8 @@ id: 17
 image: image.png
 options:
 - value: 10
+- value: 16
 - value: 15
 - value: 14
-- value: 16
-tags: counting
+tags: multiplication
 title: Sports Day
