--- a/tools/template/problem/data.yaml
+++ b/tools/template/problem/data.yaml
@@ -2,7 +2,7 @@ answer: 2
 description: null
 final: true
 id: 1
-image: image.png
+image: https://github.com/rain1024/math/releases/download/artifacts/1.png
 options:
 - value: 2
 - value: 4
